--- a/DOM/index.html
+++ b/DOM/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM Manipulation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <h1>Hello</h1>
 
 </body>
 </html>
