--- a/DOM/index.html
+++ b/DOM/index.html
@@ -12,7 +12,7 @@
 
 <input type="checkbox">
 
-<button style=":active color:red;">Click Me</button>
+<button id="btn" class="hey">Click Me</button>
 
 <ul id="list">
     <li class="list">
