--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>jQuery Exercises</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
