--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <title>jQuery Exercises</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 <body>
+    <h1>Hello</h1>
 
+    <button class="btn btn-primary">Click Me</button>
+    <button class="btn btn-secondary">Click Me</button>
+    <button class="btn btn-warning">Click Me</button>
+    <button class="btn btn-danger">Click Me</button>
+    <button class="btn btn-dark">Click Me</button>
+    <button class="btn btn-light">Click Me</button>
+    <button class="btn btn-success">Click Me</button>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script src="index.js"></script>
 </body>
