--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>The Adventures of Sherlock Holmes</h1>
+    <h3>by</h3>
+    <h2>Sir Arthur Conan Doyle</h2>
 </body>
 </html>
