--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<hr style="size: 3px">
     <h1>The Adventures of Sherlock Holmes</h1>
     <h3>by</h3>
     <h2>Sir Arthur Conan Doyle</h2>
+<hr style="size: 3px">
 </body>
 </html>
