HTML review: Anatomy of HTML

--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<hr style="size: 3px">
-    <h1>The Adventures of Sherlock Holmes</h1>
-    <h3>by</h3>
-    <h2>Sir Arthur Conan Doyle</h2>
-<hr style="size: 3px">
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+    </head>
+    <body>
+        <hr style="size: 3px">
+            <h1>The Adventures of Sherlock Holmes</h1>
+            <h3>by</h3>
+            <h2>Sir Arthur Conan Doyle</h2>
+        <hr style="size: 3px">
+    </body>
 </html>
