--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -5,13 +5,13 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>HTML Practice</title>
     </head>
     <body>
-        <hr style="size: 3px">
-            <h1>The Adventures of Sherlock Holmes</h1>
-            <h3>by</h3>
-            <h2>Sir Arthur Conan Doyle</h2>
-        <hr style="size: 3px">
+
+        <h1>Ramaj Johnson</h1>
+        <h3>by</h3>
+        <h2>Sir Arthur Conan Doyle</h2>
+
     </body>
 </html>
