--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -5,13 +5,16 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>HTML Practice</title>
+        <title>Ramaj's Personal Site</title>
     </head>
     <body>
 
         <h1>Ramaj Johnson</h1>
-        <h3>by</h3>
-        <h2>Sir Arthur Conan Doyle</h2>
-
+        <p>
+            <em>Founder of Samadhi Cybernetics</em>
+        </p>
+        <p>
+            Afrofuturist, Cybernetic System Designer, Full Stack Web2/Web3 Developer, From Montego Bay, Jamaica.
+        </p>
     </body>
 </html>
