HTML review: Anatomy of HTML

--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -14,7 +14,19 @@
             <em>Founder of Samadhi Cybernetics</em>
         </p>
         <p>
-            Afrofuturist, Cybernetic System Designer, Full Stack Web2/Web3 Developer, From Montego Bay, Jamaica.
+            I'm a Polymath and Cybernetician From Montego Bay, Jamaica.
         </p>
+
+        <hr>
+
+        <h2>Areas of Interest</h2>
+        <ul>
+            <li>Psychology</li>
+            <li>Philosophy</li>
+            <li>Spirituality/Metaphysics</li>
+            <li>STEM</li>
+            <li>Creative Arts</li>
+            <li>History/Anthropology</li>
+        </ul>
     </body>
 </html>
