HTML review: Anatomy of HTML

--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -11,7 +11,7 @@
 
         <h1>Ramaj Johnson</h1>
         <p>
-            <em>Founder of Samadhi Cybernetics</em>
+            <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
         </p>
         <p>
             I'm a Polymath and Cybernetician From Montego Bay, Jamaica.
@@ -19,7 +19,7 @@
 
         <hr>
 
-        <h2>Areas of Interest</h2>
+        <h3>Areas of Knowledge</h3>
         <ul>
             <li>Psychology</li>
             <li>Philosophy</li>
@@ -27,6 +27,13 @@
             <li>STEM</li>
             <li>Creative Arts</li>
             <li>History/Anthropology</li>
+        </ul>
+        <h3>Hobbies</h3>
+        <ul>
+            <li>Art/Music/Dance</li>
+            <li>Reiki</li>
+            <li>Cooking</li>
+            <li>Poetry</li>
         </ul>
     </body>
 </html>
