--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -8,7 +8,10 @@
         <title>Ramaj's Personal Site</title>
     </head>
     <body>
-    <img src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
+    <a href="https://github.com/ShivaSamadhi">
+        <img src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
+    </a>
+
         <h1>Ramaj Johnson</h1>
         <p>
             <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
