--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -38,5 +38,6 @@
             <li>Cooking</li>
             <li>Poetry</li>
         </ul>
+    <a href="Contact.html">Contact Me</a>
     </body>
 </html>
