--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -38,6 +38,27 @@
             <li>Cooking</li>
             <li>Poetry</li>
         </ul>
-    <a href="Contact.html">Contact Me</a>
+
+        <a href="Contact.html">Contact Me</a>
+
+        <table st>
+            <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>2020-2022</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing.</td>
+            </tr>
+            <tr>
+                <td>2018-2020</td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipisicing.</td>
+            </tr>
+            </tbody>
+        </table>
+
     </body>
 </html>
