HTML review: Anatomy of HTML

--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -41,7 +41,7 @@
 
         <a href="Contact.html">Contact Me</a>
 
-        <table st>
+        <table style="border: none">
             <thead>
             <tr>
                 <th>Dates</th>
