--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -9,28 +9,24 @@
     </head>
     <body>
 
-    <table>
-        <tr>
-            <td>
-                <a href="https://github.com/ShivaSamadhi">
-                <img src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
-            </a>
-            </td>
-            <td>
-                <h1>Ramaj Johnson</h1>
-                <p>
-                    <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
-                </p>
-                <p>
-                    I'm a Polymath and Cybernetician From Montego Bay, Jamaica.
-                </p>
-            </td>
-        </tr>
-    </table>
-
-
-
-
+        <table>
+            <tr>
+                <td style="margin: 20px">
+                    <a href="https://github.com/ShivaSamadhi">
+                    <img src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
+                </a>
+                </td>
+                <td style="margin: 20px">
+                    <h1>Ramaj Johnson</h1>
+                    <p>
+                        <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
+                    </p>
+                    <p>
+                        I'm a Polymath and Cybernetician From Montego Bay, Jamaica.
+                    </p>
+                </td>
+            </tr>
+        </table>
 
         <hr>
 
