--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -13,5 +13,24 @@
   <h3>Github</h3>
   <a href="https://github.com/ShivaSamadhi">Github/RJohnson</a>
 
+  <hr>
+
+  <form action="">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name">
+
+
+      <br>
+
+      <label for="phone">Phone Number</label>
+      <input type="text" name="phone" id="phone">
+
+      <br>
+
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email">
+
+      <input type="submit" value="">
+  </form>
 </body>
 </html>
