HTML review: Anatomy of HTML

--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -19,7 +19,6 @@
       <label for="name">Name</label>
       <input type="text" id="name" name="name">
 
-
       <br>
 
       <label for="phone">Phone Number</label>
@@ -30,7 +29,9 @@
       <label for="email">Email</label>
       <input type="email" name="email" id="email">
 
-      <input type="submit" value="">
+      <br>
+
+      <input type="submit" value="Submit">
   </form>
 </body>
 </html>
