--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Ramaj's Personal Site</title>
     </head>
-    <body>
+    <body style="background-color: #4ECCA3;">
 
         <table>
             <tr>
