--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -6,8 +6,20 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Ramaj's Personal Site</title>
+
+        <style>
+
+            hr {
+                ;
+            }
+
+            body{
+                background-color: #4ECCA3;
+            }
+        </style>
     </head>
-    <body style="background-color: #4ECCA3;">
+
+    <body>
 
         <table>
             <tr>
@@ -48,6 +60,8 @@
         </ul>
 
         <a href="Contact.html">Contact Me</a>
+
+        <hr>
 
         <table style="border: none">
             <thead>
