--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -10,7 +10,10 @@
         <style>
 
             hr {
-                ;
+              background-color: white;
+              border-style: dotted;
+              width: ;
+              height: 2px
             }
 
             body{
