--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -10,10 +10,12 @@
         <style>
 
             hr {
-              background-color: white;
-              border-style: dotted;
-              width: ;
-              height: 2px
+              border-color: white;
+              border-style: none;
+              border-top-style: dotted;
+              border-width: 5px;
+              width: 10%;
+
             }
 
             body{
