--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -33,6 +33,7 @@
 
         <hr>
 
+        <div class="center">
         <h3>Areas of Knowledge</h3>
         <ul>
             <li>Psychology</li>
@@ -49,6 +50,7 @@
             <li>Cooking</li>
             <li>Poetry</li>
         </ul>
+        </div>
 
         <a href="Contact.html">Contact Me</a>
 
