--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -33,7 +33,7 @@
 
         <hr>
 
-        <div class="center">
+        <div >
         <h3>Areas of Knowledge</h3>
         <ul>
             <li>Psychology</li>
