--- a/HTML/Exercise.html
+++ b/HTML/Exercise.html
@@ -50,7 +50,9 @@
             <li>Cooking</li>
             <li>Poetry</li>
         </ul>
-        <a href="Contact.html">Contact Me</a>
+        <a href="Contact.html">
+            <h3>Contact Me</h3>
+        </a>
         </div>
 
 
