--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Personal Site 2.0</title>
+    <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
 <body>
 
