--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
 <body>
-
+   <div class="container"></div>
+   <div class="container"></div>
+   <div class="container"></div>
+   <div class="container"></div>
 </body>
 </html>
