--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
 <body>
-   <div class="container"></div>
+   <div class="container">
+       <a href="https://github.com/ShivaSamadhi">
+           <img src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
+       </a>
+
+   </div>
    <div class="container"></div>
    <div class="container"></div>
    <div class="container"></div>
