--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,17 +6,31 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Personal Site 2.0</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
-<body>
-   <div class="container">
+<body class="">
+   <div class="container d-flex">
        <a href="https://github.com/ShivaSamadhi">
-           <img src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
+           <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
+
+       <div class="container d-block">
+           <h1>Ramaj Johnson</h1>
+           <p>
+               <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
+           </p>
+           <p>
+               I'm a Polymath and Cybernetician From Montego Bay, Jamaica.
+           </p>
+       </div>
 
    </div>
    <div class="container"></div>
    <div class="container"></div>
    <div class="container"></div>
+
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </body>
 </html>
