--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
 <body class="">
-   <div class="container d-flex">
+   <div class="container d-flex justify-content-center ms-auto me-auto ">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
 
-       <div class="container d-block">
+       <div class="container d-block mt-auto mb-auto ms-0 me-0 w-auto">
            <h1>Ramaj Johnson</h1>
            <p>
                <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
