--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
 <body class="">
-   <div class="container d-flex justify-content-center ms-auto me-auto ">
+   <div class="container d-flex justify-content-center mt-3 mb-3 ms-auto me-auto ">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
