--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
-<body class="">
+<body class="bodyColor">
    <div class="container d-flex justify-content-center mt-3 mb-3 ms-auto me-auto ">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
@@ -25,8 +25,10 @@
                I'm a Polymath and Cybernetician From Montego Bay, Jamaica.
            </p>
        </div>
-
    </div>
+
+   <hr class="hr">
+
    <div class="container"></div>
    <div class="container"></div>
    <div class="container"></div>
