--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
 
-       <div class="container d-block mt-auto mb-auto ms-0 me-0 w-auto">
+       <div class="container mt-auto mb-auto ms-0 me-0 w-auto">
            <h1>Ramaj Johnson</h1>
            <p>
                <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
