--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,7 +22,7 @@
                <em>Founder of <strong>Samadhi Cybernetics</strong> </em>
            </p>
            <p>
-               I'm a Polymath and Cybernetician From Montego Bay, Jamaica.
+               Polymath From Montego Bay, Jamaica.
            </p>
        </div>
    </div>
