--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,6 +12,7 @@
 </head>
 <body class="bodyColor">
    <div class="container d-flex justify-content-center mt-3 mb-3 ms-auto me-auto ">
+       <img src="Images/cloud.png" alt="">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
@@ -25,6 +26,8 @@
                Polymath From Montego Bay, Jamaica.
            </p>
        </div>
+       <img src="Images/cloud.png" alt="">
+       <img src="Images/mountain.png" alt="">
    </div>
 
    <hr class="hr">
