--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,9 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
-<body class="bodyColor">
+<body class="bodyColor position-relative">
    <div class="container d-flex justify-content-center mt-3 mb-3 ms-auto me-auto ">
-       <img src="Images/cloud.png" alt="">
+       <img class="position-absolute" src="Images/cloud.png" alt="">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
@@ -26,8 +26,8 @@
                Polymath From Montego Bay, Jamaica.
            </p>
        </div>
-       <img src="Images/cloud.png" alt="">
-       <img src="Images/mountain.png" alt="">
+       <img class="position-absolute" src="Images/cloud.png" alt="">
+       <img class="position-absolute" src="Images/mountain.png" alt="">
    </div>
 
    <hr class="hr">
