--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,8 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
-<body class="bodyColor">
-   <div class="container d-flex justify-content-center mt-5 mb-5 ms-auto me-auto ">
+<body class="bodyColor position-relative">
+   <div class="container d-flex justify-content-center pt-5 pb-5 ms-auto me-auto ">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
@@ -31,10 +31,19 @@
        </div>
    </div>
 
+   <img src="Images/cloud.png" alt="">
+   <img class="mtn-position" src="Images/mountain.png" alt="">
+
    <hr class="hr">
 
    <div class="container"></div>
+
+   <hr class="hr">
+
    <div class="container"></div>
+
+   <hr class="hr">
+   
    <div class="container"></div>
 
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
