--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
 <body class="bodyColor position-relative">
-   <div class="container d-flex justify-content-center pt-5 pb-5 ms-auto me-auto ">
+   <div class="container div-vh d-flex justify-content-center pt-5 pb-5 ms-auto me-auto ">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
        </a>
@@ -29,10 +29,11 @@
            </p>
 
        </div>
+       <img class="cloud-position"  src="Images/cloud.png" alt="">
+       <img class="mtn-position" src="Images/mountain.png" alt="">
+
    </div>
 
-   <img src="Images/cloud.png" alt="">
-   <img class="mtn-position" src="Images/mountain.png" alt="">
 
    <hr class="hr">
 
