--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSS/My-Site.css">
 </head>
 <body class="bodyColor position-relative">
+
    <div class="container d-flex justify-content-center pt-5 pb-5 ms-auto me-auto ">
        <a href="https://github.com/ShivaSamadhi">
            <img class="rounded-circle" src="https://s3.amazonaws.com/alumni.codeup.com/AP%20Ramaj%20Johnson.jpg" alt="">
@@ -37,7 +38,30 @@
 
    <hr class="hr">
 
-   <div class="container"></div>
+   <div class="container d-flex">
+       <div class="container text-center  w-50">
+           <h3>Areas of Knowledge</h3>
+           <ul>
+               <li>Psychology</li>
+               <li>Philosophy</li>
+               <li>Spirituality/Metaphysics</li>
+               <li>STEM</li>
+               <li>Creative Arts</li>
+               <li>History/Anthropology</li>
+           </ul>
+       </div>
+
+       <div class="container text-center  w-50">
+           <h3>Hobbies</h3>
+           <ul>
+               <li>Art/Music/Dance</li>
+               <li>Reiki</li>
+               <li>Cooking</li>
+               <li>Poetry</li>
+           </ul>
+       </div>
+
+   </div>
 
    <hr class="hr">
 
