--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -13,8 +13,18 @@
   <section id="title">
 
     <!-- Nav Bar -->
-<nav class="navbar">
-
+<nav class="navbar navbar-expand-lg bg-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a href="" class="nav-link"></a>
+    </li>
+    <li class="nav-item">
+      <a href="" class="nav-link"></a>
+    </li>
+    <li class="nav-item">
+      <a href="" class="nav-link"></a>
+    </li>
+  </ul>
 </nav>
 
 
