--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -13,16 +13,18 @@
   <section id="title">
 
     <!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg bg-dark">
-  <ul class="navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a href="" class="navbar-brand">tindog</a>
+
+  <ul class="navbar-nav ms-auto">
     <li class="nav-item">
-      <a href="" class="nav-link"></a>
+      <a href="" class="nav-link">Contact</a>
     </li>
     <li class="nav-item">
-      <a href="" class="nav-link"></a>
+      <a href="" class="nav-link">Pricing</a>
     </li>
     <li class="nav-item">
-      <a href="" class="nav-link"></a>
+      <a href="" class="nav-link">Download</a>
     </li>
   </ul>
 </nav>
