--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -15,18 +15,24 @@
     <!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a href="" class="navbar-brand">tindog</a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
 
-  <ul class="navbar-nav ms-auto">
-    <li class="nav-item">
-      <a href="" class="nav-link">Contact</a>
-    </li>
-    <li class="nav-item">
-      <a href="" class="nav-link">Pricing</a>
-    </li>
-    <li class="nav-item">
-      <a href="" class="nav-link">Download</a>
-    </li>
-  </ul>
+  <div class="collapse navbar-collapse" id="navbarToggle">
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item">
+        <a href="" class="nav-link">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a href="" class="nav-link">Download</a>
+      </li>
+    </ul>
+  </div>
+
 </nav>
 
 
