--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -16,42 +16,44 @@
   <section id="title">
 
     <!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-  <a href="" class="navbar-brand">tindog</a>
-  
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <a href="" class="navbar-brand">tindog</a>
 
-  <div class="collapse navbar-collapse" id="navbarToggle">
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item">
-        <a href="" class="nav-link">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a href="" class="nav-link">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a href="" class="nav-link">Download</a>
-      </li>
-    </ul>
-  </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-</nav>
+      <div class="collapse navbar-collapse" id="navbarToggle">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Download</a>
+          </li>
+        </ul>
+      </div>
+
+    </nav>
 
 
 
     <!-- Title -->
+    <div class="row">
+      <div class="col-lg-6">
+        <h1>Meet new and interesting dogs nearby.</h1>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+      </div>
+      <div class="col-lg-6">
+        <img src="images/iphone6.png" alt="iphone-mockup">
+      </div>
+    </div>
 
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
 
   </section>
 
