--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -13,10 +13,10 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="bg-dark text-light">
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
       <a href="" class="navbar-brand">tindog</a>
 
@@ -43,7 +43,7 @@
 
 
     <!-- Title -->
-    <div class="row">
+    <div class="row title-margin">
       <div class="col-lg-6">
         <h1>Meet new and interesting dogs nearby.</h1>
         <button type="button">Download</button>
