--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -13,10 +13,10 @@
 
 <body>
 
-  <section id="title" class="bg-dark text-light">
+  <section id="title" class="title-color text-light me-0">
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top">
 
       <a href="" class="navbar-brand">tindog</a>
 
