--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -7,13 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TinDog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   
 </head>
 
 <body>
 
-  <section id="title" class="title-color text-light me-0">
+  <section id="title" class="title-color text-light">
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top">
@@ -45,11 +48,11 @@
     <!-- Title -->
     <div class="row title-margin">
       <div class="col-lg-6">
-        <h1>Meet new and interesting dogs nearby.</h1>
+        <h1 class="h1-text ps-1">Meet new and interesting dogs nearby.</h1>
         <button type="button">Download</button>
         <button type="button">Download</button>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6 ">
         <img src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
