--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -49,11 +49,11 @@
     <div class="row title-margin">
       <div class="col-lg-6">
         <h1 class="h1-text ps-1">Meet new and interesting dogs nearby.</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
+        <button class="btn btn-light" type="button">Download</button>
+        <button class="btn btn-light" type="button">Download</button>
       </div>
-      <div class="col-lg-6 ">
-        <img src="images/iphone6.png" alt="iphone-mockup">
+      <div class="col-lg-6 d-flex justify-content-center">
+        <img class="" src="images/iphone6.png" alt="iphone-mockup">
       </div>
     </div>
 
