--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="css/styles.css">
   
 </head>
@@ -18,42 +19,47 @@
 
   <section id="title" class="title-color text-light">
 
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top p-3">
 
-      <a href="" class="navbar-brand">tindog</a>
+        <a href="" class="navbar-brand">tindog</a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarToggle">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="" class="nav-link">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Download</a>
-          </li>
-        </ul>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarToggle">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Download</a>
+            </li>
+          </ul>
+        </div>
 
-    </nav>
+      </nav>
 
 
 
-    <!-- Title -->
-    <div class="row title-margin">
-      <div class="col-lg-6">
-        <h1 class="h1-text ps-1">Meet new and interesting dogs nearby.</h1>
-        <button class="btn btn-light" type="button">Download</button>
-        <button class="btn btn-light" type="button">Download</button>
-      </div>
-      <div class="col-lg-6 d-flex justify-content-center">
-        <img class="" src="images/iphone6.png" alt="iphone-mockup">
+      <!-- Title -->
+      <div class="row title-margin">
+        <div class="col-lg-6">
+          <h1 class="h1-text ps-1">Meet new and interesting dogs nearby.</h1>
+          <button class="btn btn-dark btn-lg" type="button">
+            <img src="images/apple.png" alt="">
+            Download
+          </button>
+          <button class="btn btn-outline-light btn-lg" type="button">Download</button>
+        </div>
+        <div class="col-lg-6 d-flex justify-content-center">
+          <img class="" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
       </div>
     </div>
 
