--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -51,11 +51,17 @@
       <div class="row title-margin">
         <div class="col-lg-6">
           <h1 class="h1-text ps-1">Meet new and interesting dogs nearby.</h1>
+
           <button class="btn btn-dark btn-lg" type="button">
-            <img src="images/apple.png" alt="">
+            <i class="fa-brands fa-apple"></i>
             Download
           </button>
-          <button class="btn btn-outline-light btn-lg" type="button">Download</button>
+
+          <button class="btn btn-outline-light btn-lg" type="button">
+            <i class="fa-brands fa-google-play"></i>
+            Download
+          </button>
+
         </div>
         <div class="col-lg-6 d-flex justify-content-center">
           <img class="" src="images/iphone6.png" alt="iphone-mockup">
@@ -163,7 +169,9 @@
 
   </footer>
 
+  <script src="https://kit.fontawesome.com/5616241cec.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
