--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -21,7 +21,7 @@
 
     <div class="container-fluid">
       <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top p-3">
+      <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top p-3 ps-5 pe-5">
 
         <a href="" class="navbar-brand">tindog</a>
 
