--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <section id="title" class="title-color text-light">
+  <section id="title" class="title-color">
 
     <div class="container-fluid">
       <!-- Nav Bar -->
