--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -21,7 +21,7 @@
 
     <div class="container-fluid">
       <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top p-3 ps-5 pe-5">
+      <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top p-3 ">
 
         <a href="" class="navbar-brand">tindog</a>
 
@@ -29,7 +29,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarToggle">
+        <div class="collapse navbar-collapse pe-5" id="navbarToggle">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a href="" class="nav-link">Contact</a>
