--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -21,7 +21,7 @@
 
     <div class="container-fluid">
       <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top p-3 ">
+      <nav class="navbar navbar-expand-lg navbar-dark title-color fixed-top pt-3 ">
 
         <a href="" class="navbar-brand">tindog</a>
 
@@ -64,7 +64,7 @@
 
         </div>
         <div class="col-lg-6 d-flex justify-content-center">
-          <img class="" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="img-width" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
