--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -50,7 +50,7 @@
       <!-- Title -->
       <div class="row title-margin">
         <div class="col-lg-6">
-          <h1 class="h1-text ps-1">Meet new and interesting dogs nearby.</h1>
+          <h1 class="h1-text ps-1 text-light">Meet new and interesting dogs nearby.</h1>
 
           <button class="btn btn-dark btn-lg" type="button">
             <i class="fa-brands fa-apple"></i>
