--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -82,15 +82,15 @@
         <p>So easy to use, even your dog could do it.</p>
       </div>
 
-      <div class="col-lg-4"></div>
+      <div class="col-lg-4">
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
 
-      <div class="col-lg-4"></div>
-
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+      <div class="col-lg-4">
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
     </div>
 
 
