--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -75,8 +75,8 @@
 
   <!-- Features -->
 
-  <section id="features">
-    <div class="container-fluid row">
+  <section id="features mt-3 mb-3">
+    <div class="container-fluid row features-margin">
       <div class="col-lg-4">
         <h3>Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
