--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -75,23 +75,23 @@
 
   <!-- Features -->
 
-  <section id="features mt-3 mb-3">
-    <div class="container-fluid row features-margin">
+  <section id="features">
+    <div class="container-fluid row features-margin text-center">
       <div class="col-lg-4">
         <i class="fa-regular fa-circle-check"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="features-heading">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
 
       <div class="col-lg-4">
         <i class="fa-solid fa-bullseye"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="features-heading">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
 
       <div class="col-lg-4">
         <i class="fa-solid fa-heart"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="features-heading">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
