--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -77,22 +77,22 @@
 
   <section id="features">
     <div class="container-fluid row features-margin text-center">
-      <div class="col-lg-4">
+      <div class="col-lg-4 feat-mb">
         <i class="fa-regular fa-circle-check fa-size"></i>
         <h3 class="features-heading">Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
+        <p class="features-p">So easy to use, even your dog could do it.</p>
       </div>
 
-      <div class="col-lg-4">
+      <div class="col-lg-4 feat-mb">
         <i class="fa-solid fa-bullseye fa-size"></i>
         <h3 class="features-heading">Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
+        <p class="features-p">We have all the dogs, the greatest dogs.</p>
       </div>
 
-      <div class="col-lg-4">
+      <div class="col-lg-4 feat-mb">
         <i class="fa-solid fa-heart fa-size"></i>
         <h3 class="features-heading">Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+        <p class="features-p">Find the love of your dog's life or your money back.</p>
       </div>
     </div>
 
