--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -103,7 +103,7 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center title-color testimonials">
       <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
       <img src="images/dog-img.jpg" alt="dog-profile">
       <em>Pebbles, New York</em>
