--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -103,10 +103,10 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
-    <div class="container-fluid text-center title-color testimonials">
+    <div class="container-fluid text-center text-white title-color testimonials">
       <h2 class="testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
       <img src="images/dog-img.jpg" alt="dog-profile">
-      <em>Pebbles, New York</em>
+      <em class="testimonials-name ">Pebbles, New York</em>
     </div>
 
 
