--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -104,9 +104,17 @@
 
   <section id="testimonials">
     <div class="container-fluid text-center text-white title-color testimonials">
-      <h2 class="testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-      <img class="testimonials-img" src="images/dog-img.jpg" alt="dog-profile">
-      <em class="testimonials-name ">Pebbles, New York</em>
+      <div class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2 class="testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <img class="testimonials-img" src="images/dog-img.jpg" alt="dog-profile">
+            <em class="testimonials-name ">Pebbles, New York</em>
+          </div>
+        </div>
+        div.carousel-i
+      </div>
+
     </div>
 
 
