--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -103,6 +103,7 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
+
     <div class="container-fluid text-center text-white title-color testimonials">
       <div class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -112,22 +113,20 @@
             <em class="testimonials-name ">Pebbles, New York</em>
           </div>
         </div>
-        div.carousel-i
+        <div class="carousel-item">
+          <h2 class="testimonials-h2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <img class="testimonials-img" src="images/lady-img.jpg" alt="lady-profile">
+          <em class="testimonials-name">Beverly, Illinois</em>
+        </div>
       </div>
-
     </div>
-
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
 
   </section>
 
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="text-center title-color pb-5" id="press">
     <img src="images/techcrunch.png" alt="tc-logo">
     <img src="images/tnw.png" alt="tnw-logo">
     <img src="images/bizinsider.png" alt="biz-insider-logo">
