--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -127,10 +127,10 @@
   <!-- Press -->
 
   <section class="text-center title-color pb-5" id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="logo-size" src="images/techcrunch.png" alt="tc-logo">
+    <img class="logo-size" src="images/tnw.png" alt="tnw-logo">
+    <img class="logo-size" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="logo-size" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
