--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -126,7 +126,7 @@
 
   <!-- Press -->
 
-  <section class="text-center title-color pb-5" id="press">
+  <section class="text-center title-color" id="press">
     <img class="logo-size" src="images/techcrunch.png" alt="tc-logo">
     <img class="logo-size" src="images/tnw.png" alt="tnw-logo">
     <img class="logo-size" src="images/bizinsider.png" alt="biz-insider-logo">
