--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -104,22 +104,30 @@
 
   <section id="testimonials">
 
-    <div class="container-fluid text-center text-white title-color testimonials">
-      <div class="carousel slide" data-ride="carousel">
+
+      <div id="testimonials-carousel" class="carousel slide title-color text-center testimonials" data-ride="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2 class="testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img class="testimonials-img" src="images/dog-img.jpg" alt="dog-profile">
             <em class="testimonials-name ">Pebbles, New York</em>
           </div>
+          <div class="carousel-item">
+            <h2 class="testimonials-h2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            <img class="testimonials-img" src="images/lady-img.jpg" alt="lady-profile">
+            <em class="testimonials-name">Beverly, Illinois</em>
+          </div>
         </div>
-        <div class="carousel-item">
-          <h2 class="testimonials-h2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonials-img" src="images/lady-img.jpg" alt="lady-profile">
-          <em class="testimonials-name">Beverly, Illinois</em>
-        </div>
+        <a class="carousel-control-prev" href="#testimonials-carousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#testimonials-carousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-    </div>
+
 
   </section>
 
