--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -105,7 +105,7 @@
   <section id="testimonials">
 
 
-      <div id="testimonials-carousel" class="carousel slide title-color text-center testimonials" data-ride="false">
+      <div id="testimonials-carousel" class="carousel slide title-color text-center text-white testimonials" data-bs-ride="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <h2 class="testimonials-h2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
@@ -118,14 +118,14 @@
             <em class="testimonials-name">Beverly, Illinois</em>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#testimonials-carousel" role="button" data-slide="prev">
+        <button class="carousel-control-prev" data-bs-target="#testimonials-carousel" type="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#testimonials-carousel" role="button" data-slide="next">
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" data-bs-target="#testimonials-carousel" type="button" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
 
 
@@ -146,9 +146,10 @@
   <!-- Pricing -->
 
   <section id="pricing">
-
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <div class="container-fluid">
+      <h2 class="h1-text">A Plan for Every Dog's Needs</h2>
+      <p>Simple and affordable price plans for your and your dog.</p>
+    </div>
 
 
     <h3>Chihuahua</h3>
