--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -152,75 +152,60 @@
     </div>
 
 
-    <div class="card-deck mb-3 text-center">
-      <div class="card mb-4 box-shadow">
+    <div class="card-deck mb-3 text-center d-flex justify-content-evenly">
+      <div class="card mb-4 box-shadow ">
         <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Free</h4>
-        </div>
-        <div class="card-body">
           <h3>Chihuahua</h3>
+        </div>
+        <div class="card-body ">
+
           <h2>Free</h2>
           <ul class="list-unstyled mt-3 mb-4">
             <li>5 Matches Per Day</li>
             <li>10 Messages Per Day</li>
             <li>Unlimited App Usage</li>
           </ul>
+        </div>
+        <div class="card-footer border-0 bg-white">
           <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
         </div>
       </div>
       <div class="card mb-4 box-shadow">
         <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Pro</h4>
+          <h3>Labrador</h3>
         </div>
         <div class="card-body">
-          <h3>Labrador</h3>
+
           <h2>$49 / mo</h2>
           <ul class="list-unstyled mt-3 mb-4">
             <li>Unlimited Matches</li>
             <li>Unlimited Messages</li>
             <li>Unlimited App Usage</li>
           </ul>
-          <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+        </div>
+        <div class="card-footer border-0 bg-white">
+          <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
         </div>
       </div>
       <div class="card mb-4 box-shadow">
         <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Enterprise</h4>
+          <h3>Mastiff</h3>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+
+          <h2>$99 / mo</h2>
           <ul class="list-unstyled mt-3 mb-4">
-            <li>30 users included</li>
-            <li>15 GB of storage</li>
-            <li>Phone and email support</li>
-            <li>Help center access</li>
+            <li>Priority Listing</li>
+            <li>Unlimited Matches</li>
+            <li>Unlimited Messages</li>
+            <li>Unlimited App Usage</li>
           </ul>
-          <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+        </div>
+        <div class="card-footer border-0 bg-white">
+          <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
         </div>
       </div>
     </div>
-
-    <div class="container-fluid row">
-
-
-
-
-      <div class="card ">
-        <h3>Mastiff</h3>
-        <h2>$99 / mo</h2>
-        <p>Priority Listing</p>
-        <p>Unlimited Matches</p>
-        <p>Unlimited Messages</p>
-        <p>Unlimited App Usage</p>
-        <button type="button">Sign Up</button>
-      </div>
-    </div>
-
-
-
-
-
-
 
   </section>
 
