--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -145,32 +145,36 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
-    <div class="container-fluid text-center">
+  <section id="pricing" class="text-center">
+
       <h2 class="h1-text">A Plan for Every Dog's Needs</h2>
       <p class="pricing-subheading">Simple and affordable price plans for you and your dog.</p>
-    </div>
 
 
-    <div class="card-deck mb-3 text-center d-flex justify-content-evenly">
-      <div class="card mb-4 box-shadow ">
-        <div class="card-header">
-          <h3>Chihuahua</h3>
-        </div>
-        <div class="card-body ">
 
-          <h2>Free</h2>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>5 Matches Per Day</li>
-            <li>10 Messages Per Day</li>
-            <li>Unlimited App Usage</li>
-          </ul>
-        </div>
-        <div class="card-footer border-0 bg-white">
-          <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
+    <div class="row">
+
+      <div class="col-lg-4 col-md-6">
+        <div class="card  mb-4 box-shadow ">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>5 Matches Per Day</li>
+              <li>10 Messages Per Day</li>
+              <li>Unlimited App Usage</li>
+            </ul>
+          </div>
+          <div class="card-footer border-0 bg-white">
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
+          </div>
         </div>
       </div>
-      <div class="card mb-4 box-shadow">
+
+      <div class="col-lg-4">
+        <div class="card mb-4 box-shadow">
         <div class="card-header">
           <h3>Labrador</h3>
         </div>
@@ -187,22 +191,26 @@
           <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
         </div>
       </div>
-      <div class="card mb-4 box-shadow">
-        <div class="card-header">
-          <h3>Mastiff</h3>
-        </div>
-        <div class="card-body">
+      </div>
 
-          <h2>$99 / mo</h2>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>Priority Listing</li>
-            <li>Unlimited Matches</li>
-            <li>Unlimited Messages</li>
-            <li>Unlimited App Usage</li>
-          </ul>
-        </div>
-        <div class="card-footer border-0 bg-white">
-          <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
+      <div class="col-lg-4 col-md-12">
+        <div class="card  mb-4 box-shadow">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+
+            <h2>$99 / mo</h2>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Priority Listing</li>
+              <li>Unlimited Matches</li>
+              <li>Unlimited Messages</li>
+              <li>Unlimited App Usage</li>
+            </ul>
+          </div>
+          <div class="card-footer border-0 bg-white">
+            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up</button>
+          </div>
         </div>
       </div>
     </div>
