--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -173,7 +173,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-6">
         <div class="card mb-4 box-shadow">
         <div class="card-header">
           <h3>Labrador</h3>
