--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -76,7 +76,7 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="container-fluid row features-margin text-center">
+    <div class="container-fluid features row features-margin text-center">
       <div class="col-lg-4 feat-mb">
         <i class="fa-regular fa-circle-check fa-size"></i>
         <h3 class="features-heading">Easy to use.</h3>
@@ -155,7 +155,7 @@
     <div class="row">
 
       <div class="col-lg-4 col-md-6">
-        <div class="card  mb-4 box-shadow ">
+        <div class="card ms-5 me-5  mb-4 box-shadow ">
           <div class="card-header">
             <h3>Chihuahua</h3>
           </div>
@@ -174,7 +174,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6">
-        <div class="card mb-4 box-shadow">
+        <div class="card ms-5 me-5  mb-4 box-shadow">
         <div class="card-header">
           <h3>Labrador</h3>
         </div>
@@ -194,7 +194,7 @@
       </div>
 
       <div class="col-lg-4 col-md-12">
-        <div class="card  mb-4 box-shadow">
+        <div class="card ms-5 me-5  mb-4 box-shadow">
           <div class="card-header">
             <h3>Mastiff</h3>
           </div>
