--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -52,15 +52,18 @@
         <div class="col-lg-6">
           <h1 class="h1-text ps-1 text-light">Meet new and interesting dogs nearby.</h1>
 
-          <button class="btn btn-dark btn-lg" type="button">
-            <i class="fa-brands fa-apple"></i>
-            Download
-          </button>
+          <div class="container d-flex btn-tablet">
+            <button class="btn btn-dark btn-lg " type="button">
+              <i class="fa-brands fa-apple"></i>
+              Download
+            </button>
 
-          <button class="btn btn-outline-light btn-lg" type="button">
-            <i class="fa-brands fa-google-play"></i>
-            Download
-          </button>
+            <button class="btn btn-outline-light btn-lg " type="button">
+              <i class="fa-brands fa-google-play"></i>
+              Download
+            </button>
+          </div>
+
 
         </div>
         <div class="col-lg-6 d-flex justify-content-center">
