--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -243,7 +243,14 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <div class="container-fluid d-flex justify-content-center">
+      <i class="icon-style fa-brands fa-twitter"></i>
+      <i class="icon-style fa-brands fa-facebook-f"></i>
+      <i class="icon-style fa-brands fa-instagram"></i>
+      <i class="icon-style fa-regular fa-envelope"></i>
+    </div>
+
+    <p class="text-center">© Copyright 2018 TinDog</p>
 
   </footer>
 
