--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -150,7 +150,7 @@
 
   <section id="pricing" class="text-center">
 
-      <h2 class="h1-text h2-tablet">A Plan for Every Dog's Needs</h2>
+      <h2 class="h1-text h2-tablet h2-mobile">A Plan for Every Dog's Needs</h2>
       <p class="pricing-subheading">Simple and affordable price plans for you and your dog.</p>
 
 
