--- a/ExpressServer/Calculator/index.html
+++ b/ExpressServer/Calculator/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <form action="index.html" method="post">
+    <form action="/" method="post">
         <label for="num1">First Number</label>
         <input type="number" name="num1" id="num1">
 
