--- a/ExpressServer/Calculator/bmiCalculator.html
+++ b/ExpressServer/Calculator/bmiCalculator.html
@@ -8,12 +8,12 @@
     <title>BMI Calculator</title>
 </head>
 <body>
-    <form action="/" method="post">
-        <label for="num1">Weight</label>
-        <input type="number" name="num1" id="num1">
+    <form action="/bmicalculator" method="post">
+        <label for="weight">Weight</label>
+        <input type="text" name="weight" id="weight">
 
-        <label for="num2">Height</label>
-        <input type="number" name="num2" id="num2">
+        <label for="height">Height</label>
+        <input type="text" name="height" id="height">
 
         <button type="submit" name="submit">Calculate BMI</button>
     </form>
