--- a/WeatherProject/index.html
+++ b/WeatherProject/index.html
@@ -8,7 +8,10 @@
     <title>Weather Project</title>
 </head>
 <body>
-<label for="cityName">City Name</label>
-<input type="text" name="cityName" id="cityName" placeholder="Dallas...">
+<form action="/" method="post">
+    <label for="cityName">City Name: </label>
+    <input type="text" name="cityName" id="cityName" placeholder="Dallas...">
+</form>
+
 </body>
 </html>
