--- a/WeatherProject/index.html
+++ b/WeatherProject/index.html
@@ -11,6 +11,7 @@
 <form action="/" method="post">
     <label for="cityName">City Name: </label>
     <input type="text" name="cityName" id="cityName" placeholder="Dallas...">
+    <button type="submit">Search</button>
 </form>
 
 </body>
