--- a/MailChimp API/failure.html
+++ b/MailChimp API/failure.html
@@ -14,9 +14,9 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="text-center text-success">Uh Oh!</h1>
+            <h1 class="text-center text-success display-4">Uh Oh!</h1>
 
-            <p class="text-center">Looks like something went wrong. Try again later.</p>
+            <p class="text-center lead">Looks like something went wrong. Try again later.</p>
         </div>
     </div>
 
