--- a/MailChimp API/success.html
+++ b/MailChimp API/success.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="m-auto container-fluid bg-light">
             <h1 class="text-center text-success display-4">Congratulations!</h1>
 
             <p class="text-center lead">You've been successfully added to the ThunderKat Newsletter mailing list.</p>
