--- a/MailChimp API/failure.html
+++ b/MailChimp API/failure.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="m-auto container-fluid bg-light">
             <h1 class="text-center text-success display-4">Uh Oh!</h1>
 
             <p class="text-center lead">Looks like something went wrong. Try again later.</p>
