--- a/MailChimp API/failure.html
+++ b/MailChimp API/failure.html
@@ -17,6 +17,10 @@
             <h1 class="text-center text-success display-4">Uh Oh!</h1>
 
             <p class="text-center lead">Looks like something went wrong. Try again later.</p>
+
+            <form action="/failure" method="post">
+                <button class="btn btn-lg btn-dark" type="submit"></button>
+            </form>
         </div>
     </div>
 
