--- a/MailChimp API/failure.html
+++ b/MailChimp API/failure.html
@@ -19,7 +19,7 @@
             <p class="text-center lead">Looks like something went wrong. Try again later.</p>
 
             <form action="/failure" method="post">
-                <button class="btn btn-lg btn-dark" type="submit"></button>
+                <button class="btn btn-lg btn-warning" type="submit"></button>
             </form>
         </div>
     </div>
