Advanced JS Review

--- a/DOM/practice.html
+++ b/DOM/practice.html
@@ -15,6 +15,11 @@
         Here's a <a href="#">link</a>
     </p>
 
+    <form action="">
+        <label for="textInput"></label>
+        <input type="text" name="textInput" id="textInput">
+    </form>
+
 
 
 
