Advanced JS Review

--- a/DOM/practice.html
+++ b/DOM/practice.html
@@ -20,7 +20,7 @@
     <form action="">
         <label for="textInput"></label>
         <input type="text" name="textInput" id="textInput" maxlength="60">
-        <p id="charCount"></p>
+        <span id="charCount"></span>
     </form>
 
 
