Advanced JS Review

--- a/DOM/loops.html
+++ b/DOM/loops.html
@@ -13,10 +13,11 @@
 <body>
 
 <div id="forLoops">
-    <form action="index.html" method="post"></form>
-    <label for="userNum">Enter A Number</label>
-    <input type="number" name="userNum" id="userNum">
+        <label for="userNum">Enter A Number</label>
+        <input type="number" name="userNum" id="userNum">
+        <button type="submit" id="subBtn1">Submit</button>
 </div>
+
 <div id="forOfLoops"></div>
 <div id="forInLoops"></div>
 <div id="whileLoops"></div>
