--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -21,26 +21,78 @@
 
 <!--Game Board-->
     <main>
-        <section id="game-config">
+        <aside>
+            <h2>
+                Choose Your Name
+            </h2>
+            <form>
+                <div>
+                    <label for="playerName">
+                        Player Name
+                    </label>
+                    <input type="text" id="playerName" name="playerName">
+                </div>
+                <div>
+                    <button type="button">
+                        Cancel
+                    </button>
+                    <button type="submit">
+                        Confirm
+                    </button>
+                </div>
+            </form>
+        </aside>
+        <section id="gameConfig">
             <ol>
                 <li>
                     <article>
-                        <h2>Pla</h2>
-                        <h3></h3>
-                        <p></p>
+                        <h2>
+                            Player 1
+                        </h2>
+                        <h3>
+                            Player Nme
+                        </h3>
+                        <p>
+                            X
+                        </p>
+                        <button>
+                            Edit
+                        </button>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <h2></h2>
-                        <h3></h3>
-                        <p></p>
+                        <h2>
+                            Player 2
+                        </h2>
+                        <h3>
+                            Player Name
+                        </h3>
+                        <p>
+                            O
+                        </p>
+                        <button>
+                            Edit
+                        </button>
                     </article>
                 </li>
             </ol>
         </section>
-        <section id="game-field">
-            
+        <section id="gameField">
+
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+
+                <li></li>
+                <li></li>
+                <li></li>
+
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
         </section>
     </main>
 <!--Game Board-->
