--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="styles/styles.css">
 <!--Custom Styles-->
 </head>
-<body >
+<body class="body">
 <!--Header-->
-    <header>
+    <header id="mainHeader" class="mainHeader text-center">
         <h1>
             Play TicTacToe
         </h1>
@@ -49,10 +49,10 @@
                     <input type="text" id="playerName" name="playerName">
                 </div>
                 <div>
-                    <button type="button">
+                    <button type="button" class="btn btn-light btn-outline-danger">
                         Cancel
                     </button>
-                    <button type="submit">
+                    <button type="submit" class="btn btn-light btn-outline-success">
                         Confirm
                     </button>
                 </div>
@@ -72,7 +72,7 @@
                         <p>
                             X
                         </p>
-                        <button>
+                        <button class="btn btn-dark btn-outline-light">
                             Edit
                         </button>
                     </article>
