--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -20,6 +20,7 @@
 
 <!--Custom Styles-->
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/overlays.css">
 <!--Custom Styles-->
 </head>
 <body class="body">
@@ -37,7 +38,7 @@
 <!--Game Board-->
     <main>
 
-        <aside>
+        <aside class="modal">
             <h2>
                 Choose Your Name
             </h2>
@@ -88,7 +89,7 @@
                         <p>
                             O
                         </p>
-                        <button>
+                        <button class="btn btn-dark btn-outline-light">
                             Edit
                         </button>
                     </article>
