--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -19,8 +19,8 @@
 <!--Bootstrap CDN-->
 
 <!--Custom Styles-->
-    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/overlays.css">
+    <link rel="stylesheet" href="styles/styles.css">
 <!--Custom Styles-->
 </head>
 <body class="body">
@@ -38,7 +38,7 @@
 <!--Game Board-->
     <main>
 
-        <aside class="modal">
+        <aside class="overlay">
             <h2>
                 Choose Your Name
             </h2>
